syntax = "proto3";

package interchain_security.ccv.consumer.v1;

option go_package = "github.com/cosmos/interchain-security/x/ccv/consumer/types";

import "ibc/lightclients/tendermint/v1/tendermint.proto";
import "ibc/core/channel/v1/channel.proto";
import "gogoproto/gogo.proto";
import "interchain_security/ccv/consumer/v1/consumer.proto";
import "tendermint/abci/types.proto";

// GenesisState defines the CCV consumer chain genesis state
message GenesisState {
  Params params             = 1 [(gogoproto.nullable) = false];
  string provider_client_id = 2
      [(gogoproto.moretags) = "yaml:\"provider_client_id\""];  // empty for a completely new chain
  string provider_channel_id = 3
      [(gogoproto.moretags) = "yaml:\"provider_channel_id\""];  // empty for a completely new chain
  bool new_chain = 4
      [(gogoproto.moretags) = "yaml:\"new_chain\""];  // true for new chain GenesisState, false for chain restart.
  // ProviderClientState filled in on new chain, nil on restart.
  ibc.lightclients.tendermint.v1.ClientState provider_client_state = 5
      [(gogoproto.moretags) = "yaml:\"provider_client_state\""];
  // ProviderConsensusState filled in on new chain, nil on restart.
  ibc.lightclients.tendermint.v1.ConsensusState provider_consensus_state = 6
      [(gogoproto.moretags) = "yaml:\"provider_consensus_state\""];
  repeated UnbondingSequence unbonding_sequences = 7
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"unbonding_sequences\""];
  repeated .tendermint.abci.ValidatorUpdate initial_val_set = 8
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"initial_val_set\""];
}

// UnbondingSequence defines the genesis information for each unbonding packet sequence.
message UnbondingSequence {
  uint64                     sequence         = 1;
  uint64                     unbonding_time   = 2 [(gogoproto.moretags) = "yaml:\"unbonding_time\""];
  ibc.core.channel.v1.Packet unbonding_packet = 3
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"unbonding_packet\""];
}
